src/kernels/build.log
running build_ext
Warning: Bypassing CUDA version check for g++ 11.4.0
building 'clover_kernels' extension
[1/1] /usr/bin/nvcc --generate-dependencies-with-compile --dependency-output /home/cml/CloverInfer/src/kernels/build/temp.linux-x86_64-cpython-310/csrc/attention.o.d -I/home/cml/.local/lib/python3.10/site-packages/torch/include -I/home/cml/.local/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -I/home/cml/anaconda3/envs/clover_infer/include/python3.10 -c -c /home/cml/CloverInfer/src/kernels/csrc/attention.cu -o /home/cml/CloverInfer/src/kernels/build/temp.linux-x86_64-cpython-310/csrc/attention.o -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr --compiler-options ''"'"'-fPIC'"'"'' -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=clover_kernels -gencode=arch=compute_70,code=compute_70 -gencode=arch=compute_70,code=sm_70 -std=c++17
FAILED: [code=1] /home/cml/CloverInfer/src/kernels/build/temp.linux-x86_64-cpython-310/csrc/attention.o 
/usr/bin/nvcc --generate-dependencies-with-compile --dependency-output /home/cml/CloverInfer/src/kernels/build/temp.linux-x86_64-cpython-310/csrc/attention.o.d -I/home/cml/.local/lib/python3.10/site-packages/torch/include -I/home/cml/.local/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -I/home/cml/anaconda3/envs/clover_infer/include/python3.10 -c -c /home/cml/CloverInfer/src/kernels/csrc/attention.cu -o /home/cml/CloverInfer/src/kernels/build/temp.linux-x86_64-cpython-310/csrc/attention.o -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr --compiler-options ''"'"'-fPIC'"'"'' -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=clover_kernels -gencode=arch=compute_70,code=compute_70 -gencode=arch=compute_70,code=sm_70 -std=c++17
/usr/include/c++/11/bits/std_function.h:435:145: error: parameter packs not expanded with ‘...’:
  435 |         function(_Functor&& __f)
      |                                                                                                                                                 ^ 
/usr/include/c++/11/bits/std_function.h:435:145: note:         ‘_ArgTypes’
/usr/include/c++/11/bits/std_function.h:530:146: error: parameter packs not expanded with ‘...’:
  530 |         operator=(_Functor&& __f)
      |                                                                                                                                                  ^ 
/usr/include/c++/11/bits/std_function.h:530:146: note:         ‘_ArgTypes’
ninja: build stopped: subcommand failed.
Traceback (most recent call last):
  File "/home/cml/.local/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2597, in _run_ninja_build
    subprocess.run(
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/subprocess.py", line 526, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['ninja', '-v']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/cml/CloverInfer/src/kernels/setup.py", line 12, in <module>
    setup(
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/__init__.py", line 117, in setup
    return distutils.core.setup(**attrs)  # type: ignore[return-value]
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/core.py", line 186, in setup
    return run_commands(dist)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/core.py", line 202, in run_commands
    dist.run_commands()
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/dist.py", line 1002, in run_commands
    self.run_command(cmd)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/dist.py", line 1107, in run_command
    super().run_command(command)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/dist.py", line 1021, in run_command
    cmd_obj.run()
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/command/build_ext.py", line 97, in run
    _build_ext.run(self)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/command/build_ext.py", line 368, in run
    self.build_extensions()
  File "/home/cml/.local/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1082, in build_extensions
    build_ext.build_extensions(self)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/command/build_ext.py", line 484, in build_extensions
    self._build_extensions_serial()
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/command/build_ext.py", line 510, in _build_extensions_serial
    self.build_extension(ext)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/command/build_ext.py", line 262, in build_extension
    _build_ext.build_extension(self, ext)
  File "/home/cml/anaconda3/envs/clover_infer/lib/python3.10/site-packages/setuptools/_distutils/command/build_ext.py", line 565, in build_extension
    objects = self.compiler.compile(
  File "/home/cml/.local/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 866, in unix_wrap_ninja_compile
    _write_ninja_file_and_compile_objects(
  File "/home/cml/.local/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2223, in _write_ninja_file_and_compile_objects
    _run_ninja_build(
  File "/home/cml/.local/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2614, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error compiling objects for extension
